<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JDance</string>
    <string name="Choreographies">Choreographies</string>
    <string name="DanceFloor">Dance Floor</string>
    <string name="robots">Robots</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_step">Create Step</string>
    <string name="action_create_choreography">Create Choreography</string>
    <string name="action_go">Go</string>
    <string name="Settings">Settings</string>
    <string name="ip">Ip</string>
    <string name="port">Port</string>
    <string name="device">Device</string>
    <string name="Load_Robots">Load Robots</string>
    <string name="select_a_robot">Select a robot</string>
    <string name="step_created">Step Created</string>
    <string name="dancing">Dancing...</string>
    <string name="is_selected">is selected</string>
    <string name="choreography_name">Choreography Name</string>
    <string name="create_choreography">Create Choreography</string>
    <string name="check_ip_or_port">check ip or port</string>
    <string name="error">ERROR!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Create_Robot">Create Robot</string>
    <string name="steps">Steps</string>
    <string name="robot_id">Robot Id</string>
    <string name="add_step">Add Step</string>
    <string name="seconds">Seconds</string>
    <string name="name">Name</string>
    <string name="left_motor_velocity">Left Motor Velocity</string>
    <string name="right_motor_velocity">Right Motor Velocity</string>
    <string name="seconds_duration">Seconds Duration</string>
    <string name="create_step">Create Step</string>
    <string name="add_beep">Add Beep</string>
    <string name="create_beep">Create Beep</string>
    <string name="frequency">Frequency</string>
    <string name="about">About</string>

</resources>
