<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip">


        <!-- Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/name"
            android:singleLine="true"
            android:layout_marginBottom="5dip" />

        <!-- Name input text -->
        <EditText
            android:id="@+id/txtName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:inputType="text" />

        <!-- leftMotorVelocity Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/left_motor_velocity"
            android:singleLine="true"
            android:layout_marginBottom="5dip" />

        <!-- leftMotorVelocity seek bar -->
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbLeftMotorVelocity"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:max="200"
            android:progress="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtLeftMotorVelocity"
            android:layout_gravity="center_horizontal|right"
            android:layout_marginBottom="10dip"
            android:singleLine="true"
            android:text="0" />

        <!-- rightMotorVelocity Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/right_motor_velocity"
            android:layout_marginBottom="5dip" />

        <!-- rightMotorVelocity seek bar -->
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbRightMotorVelocity"
            android:indeterminate="false"
            android:indeterminateOnly="false"
            android:mirrorForRtl="false"
            android:max="200"
            android:progress="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/txtRightMotorVelocity"
            android:layout_marginBottom="10dip"
            android:layout_gravity="right" />

        <!-- secondsDuration Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seconds_duration"
            android:singleLine="true"
            android:layout_marginBottom="5dip" />

        <!-- secondsDuration seek bar -->
        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sbSecondsDuration"
            android:indeterminate="false"
            android:indeterminateOnly="false" />

        <!-- Create Step button -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/txtSecondsDuration"
            android:layout_marginBottom="20dip"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/btnCreateStep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/create_step" />

    </LinearLayout>

</ScrollView>

